// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesList highlights requested text 1`] = `
<div
  className="c-properties-list"
>
  <table
    className="c-properties-list__table"
  >
    <tbody>
      <tr
        className="c-properties-list__property "
      >
        <td
          className="c-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="c-properties-list__property-value"
        >
          <span
            className="highlighted"
          >
            run
          </span>
          -1
        </td>
      </tr>
      <tr
        className="c-properties-list__property "
      >
        <td
          className="c-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="c-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr
        className="c-properties-list__property c-properties-list__property--operator fs-mask"
      >
        <td
          className="c-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="c-properties-list__property-value"
        >
          PATTI SMITH #op1
        </td>
      </tr>
      <tr
        className="c-properties-list__property c-properties-list__property--last-login"
      >
        <td
          className="c-properties-list__property-label"
        >
          Last Login
        </td>
        <td
          className="c-properties-list__property-value"
        >
          4 hr 3 min; 1:38 PM
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a ghost 1`] = `
<div
  className="c-properties-list"
>
  <table
    className="c-properties-list__table"
  >
    <tbody>
      <tr
        className="c-properties-list__property "
      >
        <td
          className="c-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="c-properties-list__property-value"
        >
          123-0123
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders a properties list for a vehicle 1`] = `
<div
  className="c-properties-list"
>
  <table
    className="c-properties-list__table"
  >
    <tbody>
      <tr
        className="c-properties-list__property "
      >
        <td
          className="c-properties-list__property-label"
        >
          Run
        </td>
        <td
          className="c-properties-list__property-value"
        >
          run-1
        </td>
      </tr>
      <tr
        className="c-properties-list__property "
      >
        <td
          className="c-properties-list__property-label"
        >
          Vehicle
        </td>
        <td
          className="c-properties-list__property-value"
        >
          v1-label
        </td>
      </tr>
      <tr
        className="c-properties-list__property c-properties-list__property--operator fs-mask"
      >
        <td
          className="c-properties-list__property-label"
        >
          Operator
        </td>
        <td
          className="c-properties-list__property-value"
        >
          PATTI SMITH #op1
        </td>
      </tr>
      <tr
        className="c-properties-list__property c-properties-list__property--last-login"
      >
        <td
          className="c-properties-list__property-label"
        >
          Last Login
        </td>
        <td
          className="c-properties-list__property-value"
        >
          4 hr 3 min; 1:38 PM
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropertiesList renders generic properties 1`] = `
<div
  className="c-properties-list"
>
  <table
    className="c-properties-list__table"
  >
    <tbody>
      <tr
        className="c-properties-list__property "
      >
        <td
          className="c-properties-list__property-label"
        >
          Label 1
        </td>
        <td
          className="c-properties-list__property-value"
        >
          Value 1
        </td>
      </tr>
      <tr
        className="c-properties-list__property "
      >
        <td
          className="c-properties-list__property-label"
        >
          Label 2
        </td>
        <td
          className="c-properties-list__property-value"
        >
          Value 2
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
